--- a/application/modules/default/views/scripts/product/index-new.phtml
+++ b/application/modules/default/views/scripts/product/index-new.phtml
@@ -57,7 +57,7 @@ $this->headMeta()->appendProperty('og:image',
 $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
 $this->headLink()->appendStylesheet('/theme/react/lib/mdl/material.min.css');
 $this->headLink()->appendStylesheet('https://fonts.googleapis.com/icon?family=Material+Icons');
-$this->headLink()->appendStylesheet('https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,500');
+$this->headLink()->appendStylesheet('https://fonts.googleapis.com/css?family=Ubuntu:300,400,500');
 $this->headLink()->appendStylesheet('/theme/react/assets/css/style.css');
 
 ?>
