--- a/application/modules/default/views/layout/layout_appimagehub_home.phtml
+++ b/application/modules/default/views/layout/layout_appimagehub_home.phtml
@@ -1,4 +1,4 @@
-<?php 
+<?php
 /**
  *  ocs-webserver
  *
@@ -26,33 +26,34 @@
     <?php echo $this->render('partials/htmlheader.phtml'); ?>
 
     <link rel="SHORTCUT ICON" href="<?=$this->template['favicon']?>"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <link rel="stylesheet" type="text/css" href="/theme/flatui/js/lib/tooltipster/dist/css/tooltipster.bundle.min.css" />
     <link rel="stylesheet" type="text/css" href="/theme/flatui/js/lib/tooltipster/dist/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-light.min.css" />
     <link rel="stylesheet" type="text/css" href="/theme/flatui/css/tooltipster-light-customized.css" />
     <!-- Loading Bootstrap -->
     <link rel="stylesheet" href="/theme/flatui/css/bootstrap/bootstrap.min.css" type="text/css"  crossorigin="anonymous">
-    <link rel="stylesheet" href="/tools/fancybox2.1.4/jquery.fancybox.css?v=2.1.4" type="text/css" media="screen" />    
+    <link rel="stylesheet" href="/tools/fancybox2.1.4/jquery.fancybox.css?v=2.1.4" type="text/css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/theme/flatui/js/lib/tooltipster/dist/css/tooltipster.bundle.min.css" />
     <link rel="stylesheet" type="text/css" href="/theme/flatui/js/lib/tooltipster/dist/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-light.min.css" />
     <link rel="stylesheet" type="text/css" href="/theme/flatui/css/tooltipster-light-customized.css" />
-    <!-- custom styles -->   
+    <!-- custom styles -->
     <link href="/theme/flatui/css/style.css" rel="stylesheet">
     <link href="/theme/flatui/css/stylesheet.css?<?= APPLICATION_VERSION ?>" rel="stylesheet">
     <link href="/theme/flatui/css/explore_index.css" rel="stylesheet">
     <link href="/theme/flatui/css/startpage.css" rel="stylesheet">
 
 
-    
-    <link rel="alternate" type="application/rss+xml" title="Latest Products" href="/content.rdf"/>    
+
+    <link rel="alternate" type="application/rss+xml" title="Latest Products" href="/content.rdf"/>
     <link href="/theme/flatui/css/explore_index.css" rel="stylesheet">
     <link href="/theme/react/lib/mdl/material.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500" rel="stylesheet">
+
     <link href="/theme/react/assets/css/style.css" rel="stylesheet">
     <script src="/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>
-    <script src="/theme/flatui/js/lib/bootstrap.min.js" ></script>    
+    <script src="/theme/flatui/js/lib/bootstrap.min.js" ></script>
     <script type="text/javascript" src="/theme/flatui/js/lib/tooltipster/dist/js/tooltipster.bundle.min.js"></script>
     <script src="/theme/flatui/js/lib/moment.min.js"></script>
     <script type="text/javascript" src="/tools/fancybox2.1.4/jquery.fancybox.pack.js?v=2.1.4"></script>
@@ -117,8 +118,8 @@ echo $this->render('partials/propagateLogout.phtml');
         ga('send', 'pageview');
 
     </script>
-    
-    
+
+
     <!-- Piwik -->
     <?php
     $piwikid ='1';
