--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -2,6 +2,14 @@ out: ../css/style.css, sourcemap: true, compress: true
 
 @import "elements.less";
 
+.reverse {
+  -moz-transform: scale(-1, 1) !important;
+  -webkit-transform: scale(-1, 1) !important;
+  -o-transform: scale(-1, 1) !important;
+  -ms-transform: scale(-1, 1) !important;
+  transform: scale(-1, 1) !important;
+}
+
 #metaheader {
   float: left;
   width: 100%;
@@ -995,6 +1003,7 @@ header {
 }
 
 .modal {
+
   .modal-dialog {
     .modal-content {
       .modal-header {
@@ -1050,6 +1059,38 @@ header {
       }
     }
   }
+
+  &.please-login {
+    .modal-dialog {
+      width: 250px;
+      .modal-title {
+        padding: 0 !important;
+        text-align: center;
+      }
+      .modal-body {
+        text-align: center;
+      }
+    }
+  }
+
+  &.report-comment-modal {
+
+    .modal-title {
+      padding-left: 0 !important;
+    }
+
+    .modal-footer {
+      a {
+        float: right !important;
+
+        .glyphicon {
+          display: inline-block !important;
+          margin-right: 5px !important;
+        }
+      }
+    }
+  }
+
 }
 
 table {
@@ -2426,6 +2467,42 @@ table {
       width: 20%;
       margin-bottom: 20px;
       font-size: 14px;
+
+      .item-content {
+        padding-left: 70px;
+        padding-right: 10px;
+        position: relative;
+        height: 60px;
+        margin-bottom: 10px;
+
+        .user-avatar {
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 60px;
+          width: 60px;
+          background: white;
+          border: 2px solid #ccc;
+          border-radius: 100%;
+          padding: 2px;
+          overflow: hidden;
+
+          img {
+            border-radius: 100%;
+            width: 100%;
+            height: 100%;
+          }
+        }
+
+        span {
+          margin-right: 5px;
+          display: block;
+          float: left;
+          width: 100%;
+          height: 20px;
+          line-height: 20px;
+        }
+      }
 
       .user-avatar {
         img {
