--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -1800,12 +1800,12 @@ table {
           span {
             position: absolute;
             left: 0;
-            top: 0;
+            top: 3px;
             width: 100%;
             height: 100%;
             text-align: center;
             padding-top: 5px;
-            font-size: 15px;
+            font-size: 12px;
             font-weight: 500 !important;
             cursor: pointer;
           }
