--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -13,7 +13,7 @@ out: ../css/style.css, sourcemap: true, compress: true
 #metaheader {
   float: left;
   width: 100%;
-  height: 42px;
+  height: 34px;
 
   #metaheader-nav {
     width: 100%;
@@ -24,11 +24,12 @@ out: ../css/style.css, sourcemap: true, compress: true
       border-radius: 2px !important;
       color: white !important;
       font-size: 12px !important;
-      height: 30px !important;
-      line-height: 30px !important;
+      height: 26px !important;
+      line-height: 25px !important;
       font-weight: bold;
       border: 1px solid #3079ed;
       background: -webkit-linear-gradient(top, #4387fd, #4683ea);
+      margin-top: -2px;
     }
 
     ul.metaheader-menu {
@@ -38,7 +39,7 @@ out: ../css/style.css, sourcemap: true, compress: true
 
       > li {
         float: left;
-        padding: 9px 5px;
+        padding: 5px;
 
         > a {
           color: #6a7686;
@@ -135,12 +136,18 @@ out: ../css/style.css, sourcemap: true, compress: true
                 width: 50%;
                 float: left;
                 height: auto;
+
+                a.groupname {
+                  cursor: default;
+                }
+
                 ul {
                   list-style-type: none;
                   padding: 0;
                   margin: 0;
 
                   li {
+
                     a {
                       padding: 3px 20px;
                       font-size: 12px;
@@ -331,6 +338,24 @@ out: ../css/style.css, sourcemap: true, compress: true
               }
             }
 
+            &#messages-link-item {
+              a {
+                .icon {
+                  background-image: url(../img/messages.png);
+                  background-size: 45px;
+                }
+              }
+            }
+
+            &#issues-link-item {
+              a {
+                .icon {
+                  background-image: url(../img/issues.png);
+                  background-size: 45px;
+                }
+              }
+            }
+
             &:hover {
               border:1px solid #e5e5e5;
               a {
@@ -352,8 +377,8 @@ out: ../css/style.css, sourcemap: true, compress: true
       .user-dropdown {
         .dropdown-toggle {
           img {
-            height: 32px;
-            width: 32px;
+            height: 26px;
+            width: 26px;
             border-radius: 100%;
             margin-top: -4px;
           }
@@ -454,6 +479,7 @@ out: ../css/style.css, sourcemap: true, compress: true
             background-color: #f5f5f5;
 
             .btn {
+              display: block;
               border-radius: 2px;
               padding: 0 16px;
               font-size: 12px;
@@ -462,6 +488,8 @@ out: ../css/style.css, sourcemap: true, compress: true
               color: #666 !important;
               background: #f8f8f8;
               border: 1px solid #c6c6c6;
+              float: left;
+              clear: none;
 
               &:hover {
                 -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.1);
@@ -474,6 +502,7 @@ out: ../css/style.css, sourcemap: true, compress: true
                 background-image: -webkit-linear-gradient(top,#fff,#f8f8f8);
                 background-image: linear-gradient(top,#fff,#f8f8f8);
               }
+
             }
           }
         }
