--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -1,10 +1,10 @@
-<link rel="stylesheet" href="www.opendesktop.cc/theme/flatui/css/bootstrap/bootstrap.min.css" type="text/css"  crossorigin="anonymous">
-<link href="www.opendesktop.cc/theme/react/assets/css/metaheader.css" rel="stylesheet">
+<link rel="stylesheet" href="https://www.opendesktop.cc/theme/flatui/css/bootstrap/bootstrap.min.css" type="text/css"  crossorigin="anonymous">
+<link href="https://www.opendesktop.cc/theme/react/assets/css/metaheader.css" rel="stylesheet">
 
-<script src="www.opendesktop.cc/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>
-<script src="www.opendesktop.cc/theme/flatui/js/lib/bootstrap.min.js" ></script>
-<script type="text/javascript" src="www.opendesktop.cc/theme/react/lib/react/react.js"></script>
-<script type="text/javascript" src="www.opendesktop.cc/theme/react/lib/react-dom/react-dom.js"></script>
+<script src="https://www.opendesktop.cc/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>
+<script src="https://www.opendesktop.cc/theme/flatui/js/lib/bootstrap.min.js" ></script>
+<script type="text/javascript" src="https://www.opendesktop.cc/theme/react/lib/react/react.js"></script>
+<script type="text/javascript" src="https://www.opendesktop.cc/theme/react/lib/react-dom/react-dom.js"></script>
 
 
 <div id="metaheader"></div>
@@ -16,4 +16,4 @@
   var loginUrl = "<?=$loginUrl?>";
   var sName = "<?=$sname?>";
 </script>
-<script type="text/javascript" src="www.opendesktop.cc/theme/react/metaheader.js"></script>
+<script type="text/javascript" src="https://www.opendesktop.cc/theme/react/metaheader.js"></script>
