--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -8,4 +8,12 @@
 
 
 <div id="metaheader"></div>
+<script>
+  var domains = '';
+  var user = '';
+  var baseUrl = "www.opendesktop.cc";
+  var blogUrl = "forum.opendesktop.cc";
+  var loginUrl = "/login";
+  var sName = "";
+</script>
 <script type="text/javascript" src="https://www.opendesktop.cc/theme/react/metaheader.js"></script>
