--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -1,4 +1,4 @@
-out: ../css/metaheader.css, sourcemap: true, compress: true
+ out: ../css/metaheader.css, sourcemap: true, compress: true
 
 @import "elements.less";
 
@@ -6,6 +6,7 @@ out: ../css/metaheader.css, sourcemap: true, compress: true
   float: left;
   width: 100%;
   height: 34px;
+  font-size: 13px !important;
 
   #metaheader-nav {
     width: 100%;
@@ -31,7 +32,8 @@ out: ../css/metaheader.css, sourcemap: true, compress: true
 
       > li {
         float: left;
-        padding: 5px;
+        padding: 6px;
+        margin-top: 3px;
 
         > a {
           color: #6a7686;
@@ -139,6 +141,8 @@ out: ../css/metaheader.css, sourcemap: true, compress: true
                   margin: 0;
 
                   li {
+                    height: 24px;
+                    line-height: 24px;
 
                     a {
                       padding: 3px 20px;
@@ -188,6 +192,7 @@ out: ../css/metaheader.css, sourcemap: true, compress: true
 
           &#user-login-container {
             padding: 5px;
+            margin-top: 1px;
           }
         }
       }
