metaheader react js

--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -33,7 +33,6 @@
       > li {
         float: left;
         padding: 6px;
-        margin-top: 3px;
 
         > a {
           color: #6a7686;
@@ -133,6 +132,8 @@
 
                 a.groupname {
                   cursor: default;
+                  font-size: 24px;
+                  line-height: 24px;
                 }
 
                 ul {
@@ -151,7 +152,7 @@
                       margin-bottom: 10px;
                       li {
                         height: 24px;
-                        line-height: 24px;                        
+                        line-height: 24px;
                         a {
                           padding: 3px 30px;
                         }
