--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -132,7 +132,7 @@
 
                 a.groupname {
                   cursor: default;
-                  font-size: 24px;
+                  height: 24px;
                   line-height: 24px;
                 }
 
