--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -32,12 +32,16 @@
 
       > li {
         float: left;
-        padding: 6px;
+        padding: 5px;
 
         > a {
           color: #6a7686;
           border-radius: 5px;
           padding: 5px;
+          color: #6a7686;
+          border-radius: 5px;
+          height: 24px;
+          line-height: 24px;
 
           &:active,
           &:hover {
