--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -205,6 +205,8 @@
 
     .user-dropdown {
       position: relative;
+      height: 40px;
+      z-index: 10000;
 
       .dropdown-toggle {
         padding: 0;
