--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -6,7 +6,8 @@
   float: left;
   width: 100%;
   height: 34px;
-  font-size: 13px !important;
+  font-family: "Helvetica","Arial",sans-serif !important;
+  font-size: 14px !important;
 
   #metaheader-nav {
     width: 100%;
@@ -208,6 +209,7 @@
       height: 40px;
       z-index: 1000;
 
+
       .dropdown-toggle {
         padding: 0;
         background-color: white;
@@ -225,6 +227,7 @@
           font-style: normal;
           font-weight: 100;
           margin: 0 5px;
+          margin-top: 2px;
         }
       }
 
