--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -2,12 +2,20 @@
 
 @import "elements.less";
 
+body {
+  padding-top: 34px;
+}
+
 #metaheader {
   float: left;
   width: 100%;
   height: 34px;
   font-family: "Helvetica","Arial",sans-serif !important;
   font-size: 14px !important;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000;
 
   #metaheader-nav {
     width: 100%;
