--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -34,6 +34,10 @@ body {
       margin-top: -2px;
     }
 
+    #user-menu-container {
+      float: right;
+    }
+
     ul.metaheader-menu {
       padding: 0;
       margin: 0;
