--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -4,6 +4,10 @@
 
 body {
   padding-top: 34px;
+
+  .navbar-gitlab {
+    top: 34px;
+  }
 }
 
 #metaheader {
@@ -15,7 +19,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 1001;
   background-color: white;
 
 
@@ -164,6 +168,7 @@ body {
               width: 400px;
               top: 60px;
               right: -250px;
+              min-height: 296px;
 
               &::before {
                 right: 356px;
@@ -216,6 +221,12 @@ body {
             cursor: pointer;
             height: 60px;
             z-index: 1000;
+
+            &:hover {
+              .dropdown-menu {
+                display: block;
+              }
+            }
 
             .dropdown-menu {
               width: 200px;
