--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -259,6 +259,12 @@ body {
       height: 40px;
       z-index: 1000;
 
+      &.open {
+
+        .dropdown-menu {
+          display: block;
+        }
+      }
 
       .dropdown-toggle {
         padding: 0;
