--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -25,8 +25,6 @@ body {
 
   .dropdown-menu {
     position: absolute;
-    top: 100%;
-    left: 0;
     z-index: 1000;
     display: none;
     float: left;
@@ -45,6 +43,15 @@ body {
     -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
     box-shadow: 0 6px 12px rgba(0,0,0,.175);
     background-color: white;
+
+
+    li>a:hover,
+    .active>a,
+    .active>a:hover {
+        color: #222;
+        text-decoration: none;
+        background-color: #eee !important;
+    }
   }
 
 
