--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -190,6 +190,10 @@ body {
                   cursor: default;
                   height: 24px;
                   line-height: 24px;
+
+                  &:hover {
+                    background-color: white !important;
+                  }
                 }
 
                 ul {
@@ -242,6 +246,19 @@ body {
 
               &::before {
                 right: 156px;
+              }
+
+              li {
+                padding: 0;
+
+                a {
+                  margin: 0;
+                  font-size: 13px;
+                  height: 24px;
+                  line-height: 24px;
+                  padding: 0 20px;
+                  border-radius: 0;                 
+                }
               }
             }
           }
