--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -44,6 +44,9 @@ body {
     box-shadow: 0 6px 12px rgba(0,0,0,.175);
     background-color: white;
 
+    li {
+      padding: 0;
+    }
 
     li>a:hover,
     .active>a,
@@ -257,7 +260,7 @@ body {
                   height: 24px;
                   line-height: 24px;
                   padding: 0 20px;
-                  border-radius: 0;                 
+                  border-radius: 0;
                 }
               }
             }
