--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -100,6 +100,7 @@ body {
           &:active,
           &:hover {
             background-color: #eee;
+            text-decoration: none;
           }
         }
 
