--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -372,6 +372,10 @@ body {
               height: auto;
               float: left;
 
+              &:hover {
+                background-color: white !important;
+              }
+
               .icon {
                 width: 55px;
                 height: 55px;
