--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -247,6 +247,7 @@ body {
               width: 200px;
               top: 60px;
               right: -43px;
+              min-height: 77px;
 
               &::before {
                 right: 156px;
