--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -288,7 +288,8 @@ body {
       height: 40px;
       z-index: 1000;
 
-      &.open {
+      &.open,
+      &.show {
 
         .dropdown-menu {
           display: block;
@@ -297,6 +298,7 @@ body {
 
       .dropdown-toggle {
         padding: 0;
+        background: none !important;
         background-color: white;
         color: #6a7686;
 
