--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -23,6 +23,10 @@ body {
   background-color: white;
 
 
+  .glyphicon-th:before {
+      content: "\e011";
+  }
+
   .dropdown-menu {
     position: absolute;
     z-index: 1000;
@@ -301,6 +305,7 @@ body {
         background: none !important;
         background-color: white;
         color: #6a7686;
+        border: 0;
 
         &:active {
           background-color: white;
