--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -48,6 +48,11 @@ body {
     box-shadow: 0 6px 12px rgba(0,0,0,.175);
     background-color: white;
 
+    &.dropdown-menu-right {
+      right: 0;
+      left: auto;
+    }
+
     li {
       padding: 0;
     }
