--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -16,7 +16,7 @@ body {
   height: 34px;
   font-family: "Helvetica","Arial",sans-serif !important;
   font-size: 14px !important;
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   z-index: 1001;
