--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -364,6 +364,13 @@ body {
 
       .user-dropdown {
 
+        .th-icon {
+          height: 24px;
+          width: 24px;
+          display: block;
+          background-image: url('../img/glyphicon-th.png');
+        }
+
         .dropdown-menu  {
           padding: 23px 28px;
           right: -42px;
