--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -368,7 +368,7 @@ body {
           height: 24px;
           width: 24px;
           display: block;
-          background-image: url('../img/glyphicon-th.png');
+          background-image: url('../img/glyphicons-th.png');
         }
 
         .dropdown-menu  {
