--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -368,7 +368,9 @@ body {
           height: 24px;
           width: 24px;
           display: block;
-          background-image: url('../img/glyphicons-th.png');
+          background-image: url(../img/glyphicons-th.svg);
+          background-size: 32px;
+          background-position: center -5px;
         }
 
         .dropdown-menu  {
