--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -8,6 +8,12 @@ body {
   .navbar-gitlab {
     top: 34px;
   }
+
+  &.ui-indigo  {
+    #metaheader {
+      position: fixed;
+    }
+  }
 }
 
 #metaheader {
