--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -12,6 +12,25 @@ body {
   &.ui-indigo  {
     #metaheader {
       position: fixed;
+      #metaheader-nav {
+        #user-context-menu-container {
+          .user-dropdown .dropdown-menu {
+            margin-top: 14px !important;
+          }
+          .user-dropdown .dropdown-menu::before {
+            right: 4px !important;
+          }
+        }
+
+        #user-login-menu-container {
+          .user-dropdown .dropdown-menu {
+            margin-top: 14px !important;
+          }
+          .user-dropdown .dropdown-menu::before {
+            right: 4px !important;
+          }                   
+        }
+      }
     }
   }
 }
