--- a/application/modules/default/views/scripts/home/metamenujs.phtml
+++ b/application/modules/default/views/scripts/home/metamenujs.phtml
@@ -46,11 +46,10 @@ if($loginMember->member_id)
 }
 
 ?>
-<script>
-  var domains = <?=$json_menu?>;
-  var user = <?= $json_user ?>;
-  var baseUrl = "<?=$baseurl?>";
-  var blogUrl = "<?=$url_blog?>";
-  var loginUrl = "<?=$loginUrl?>";
-  var sName = "<?=$sname?>";
-</script>
+var domains = <?=$json_menu?>;
+var user = <?= $json_user ?>;
+var baseUrl = "<?=$baseurl?>";
+var blogUrl = "<?=$url_blog?>";
+var forumUrl = "<?=$url_forum?>";
+var loginUrl = "<?=$loginUrl?>";
+var sName = "<?=$sname?>";
