--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -1,3 +1,52 @@
+<?php
+/**
+ *  ocs-webserver
+ *
+ *  Copyright 2016 by pling GmbH.
+ *
+ *    This file is part of ocs-webserver.
+ *
+ *    This program is free software: you can redistribute it and/or modify
+ *    it under the terms of the GNU Affero General Public License as
+ *    published by the Free Software Foundation, either version 3 of the
+ *    License, or (at your option) any later version.
+ *
+ *    This program is distributed in the hope that it will be useful,
+ *    but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *    GNU Affero General Public License for more details.
+ *
+ *    You should have received a copy of the GNU Affero General Public License
+ *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ **/
+
+
+
+$baseurl = Zend_Registry::get('config')->settings->client->default->baseurl;
+$url_forum = Zend_Registry::get('config')->settings->client->default->url_forum;
+$url_blog = Zend_Registry::get('config')->settings->client->default->url_blog;
+
+$sname = Zend_Registry::get('store_host');
+$json_menu = $this->fetchMetaheaderMenuJson();
+$loginMember = $this->getAuthUser();
+if($loginMember->member_id)
+{
+    $json_user = Zend_Json::encode($loginMember);
+    $username = $loginMember->username;
+    $profile_image_url = $loginMember->profile_image_url;
+    $loginUrl = null;
+}else{
+    $json_user = Zend_Json::encode(null);
+    $username = null;
+    $profile_image_url = null;
+    $serverUrl = $this->serverUrl();
+    $helperEncryptUrl = new Default_View_Helper_EncryptUrl();
+    $redirectString = '/redirect/' . $helperEncryptUrl->EncryptUrl(Zend_Controller_Front::getInstance()->getRequest()->getScheme() . '://' . Zend_Controller_Front::getInstance()->getRequest()->getHttpHost().$_SERVER["REQUEST_URI"]);
+    $loginUrl = $serverUrl.'/login'.(strpos($_SERVER["REQUEST_URI"], 'login')?'':$redirectString);
+}
+
+?>
+
 <link href="https://www.opendesktop.cc/theme/react/assets/css/metaheader.css" rel="stylesheet">
 
 <script src="https://www.opendesktop.cc/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>
@@ -7,18 +56,14 @@
 <div id="metaheader"></div>
 
 <script>
-  var domains = '';
-  var user = '';
-  var baseUrl = "www.opendesktop.cc";
-  var blogUrl = "forum.opendesktop.cc";
-  var loginUrl = "/login";
-  var sName = "";
+    var domains = <?=$json_menu?>;
+    var user = <?= $json_user ?>;
+    var baseUrl = "<?=$baseurl?>";
+    var blogUrl = "<?=$url_blog?>";
+    var forumUrl = "<?=$url_forum?>";
+    var loginUrl = "<?=$loginUrl?>";
+    var sName = "<?=$sname?>";
 </script>
+    
 <script type="text/javascript" src="https://www.opendesktop.cc/theme/react/metaheader.js"></script>
 
-
-
-<?php
-$test = '<link href="https://www.opendesktop.cc/theme/react/assets/css/metaheader.css" rel="stylesheet">\n<script src="https://www.opendesktop.cc/theme/flatui/js/lib/jquery-3.2.1.min.js" ></script>\n<script src="https://www.opendesktop.cc/theme/flatui/js/lib/bootstrap.min.js" ></script>\n<script type="text/javascript" src="https://www.opendesktop.cc/theme/react/lib/react/react.js"></script>\n<script type="text/javascript" src="https://www.opendesktop.cc/theme/react/lib/react-dom/react-dom.js"></script>\n<div id="metaheader"></div>\n<script>\nvar user = "";\nvar loginUrl = "/login";\nvar sName = "";\n</script>\n<script type="text/javascript" src="https://www.opendesktop.cc/theme/react/metaheader.js"></script>';
-
-?>
