--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -58,7 +58,7 @@ if($loginMember->member_id)
 
 <script>
     var domains = <?=$json_menu?>;
-    var user = <?= $json_user ?>;
+    var user = null;
     var baseUrl = "<?=$baseurl?>";
     var blogUrl = "<?=$url_blog?>";
     var forumUrl = "<?=$url_forum?>";
