--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -52,6 +52,8 @@ echo "<!-- phash: ". $phash . " -->";
 
 Zend_Registry::set('phash', 'test');
 
+$phash = Zend_Registry::get('phash');
+
 echo "<!-- phash: ". $phash . " -->";
 
 
