--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -358,11 +358,13 @@ body {
         padding: 0;
         width: 320px;
         top: 40px;
+        bottom: auto !important;
         background: #fff;
         border: 1px solid #ccc;
         border-color: rgba(0,0,0,0.2);
         color: #000;
         box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+        box-sizing: border-box !important;
 
         &::before {
           content: "";
@@ -381,6 +383,7 @@ body {
 
         li {
           float: left;
+          box-sizing: border-box !important;
         }
       }
     }
@@ -430,6 +433,7 @@ body {
                 background-size: 50px;
                 background-position: center center;
                 background-repeat: no-repeat;
+                width: 100%;
               }
 
               span {
