--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -534,11 +534,20 @@ body {
             right: 6px;
           }
 
+          #user-info-menu-item {
+            width: 100%;
+          }
+
           #user-info-section {
             height: auto;
             padding: 20px;
             background: white;
             float: left;
+            padding-left: 116px;
+            position: relative;
+            width: 100%;
+            min-height: 136px;
+            box-sizing: border-box;
 
             .user-avatar {
               height: 96px;
@@ -546,6 +555,9 @@ body {
               float: left;
               border-radius: 100%;
               overflow: hidden;
+              position: absolute;
+              top: 20px;
+              left: 20px;
 
               .no-avatar-user-letter {
                 border-radius: 100%;
