--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -38,7 +38,8 @@ body {
 #metaheader {
 
   * {
-    outline: none !important; 
+    outline: none !important;
+    box-sizing: border-box;
   }
 
 
