--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -33,6 +33,15 @@ body {
       }
     }
   }
+
+  &.navigation-topics {
+    #metaheader #metaheader-nav #user-context-menu-container .user-dropdown .th-icon {
+      margin-top: -6px;
+    }
+    #metaheader #metaheader-nav #user-login-menu-container .user-dropdown .dropdown-toggle img {
+      margin-top: -7px;
+    }
+  }
 }
 
 #metaheader {
