--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -26,13 +26,6 @@ body {
 }
 
 #metaheader {
-
-  * {
-    outline: none !important;
-    box-sizing: border-box;
-  }
-
-
   float: left;
   width: 100%;
   height: 34px;
@@ -44,9 +37,9 @@ body {
   z-index: 1001;
   background-color: white;
 
-
-  .glyphicon-th:before {
-      content: "\e011";
+  * {
+    outline: none !important;
+    box-sizing: border-box;
   }
 
   .dropdown-menu {
@@ -92,6 +85,7 @@ body {
   #metaheader-nav {
     width: 100%;
     float: left;
+    height: 34px;
 
     .btn-metaheader {
       padding: 0 12px !important;
