--- a/httpdocs/theme/react/assets/less/metaheader.less
+++ b/httpdocs/theme/react/assets/less/metaheader.less
@@ -529,6 +529,7 @@ body {
 
           #user-info-menu-item {
             width: 100%;
+            border-bottom: 1px solid #ccc;
           }
 
           #user-info-section {
