--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -49,19 +49,10 @@ $phash = $sess->phash;
 
 echo "<!-- phash: ". $phash . " -->";
 
-Zend_Registry::set('phash', 'test');
+$filter = new Local_Filter_Url_Decrypt();
+$p = $filter->filter($phash);
 
-$phash = Zend_Registry::get('phash');
-
-echo "<!-- phash: ". $phash . " -->";
-
-$filter = new Local_Filter_Url_Encrypt();
-$p = $filter->filter('phinware');
-Zend_Registry::set('phash', $p);
-
-$phash = Zend_Registry::get('phash');
-
-echo "<!-- phash: ". $phash . " -->";
+echo "<!-- phash de: ". $p . " -->";
 
 
 echo $this->render('partials/header/metaheader.phtml'); ?>
